infra/k8s/observability/base/networkpolicy-allow-beats-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-beats-egress
spec:
  podSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - filebeat
          - metricbeat
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 79.137.32.27/32
      ports:
        - protocol: TCP
          port: 9201
        - protocol: TCP
          port: 10250
    - to:
        - ipBlock:
            cidr: 10.43.0.1/32
      ports:
        - protocol: TCP
          port: 443
    - to:
        - ipBlock:
            cidr: 10.43.0.10/32
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
